<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/search"
    android:background="#757575"
    android:icon="@drawable/search"
    android:title="Search Stops"
    app:showAsAction="always"/>
</menu>
