<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.abqwtb.stops.StopsListFragment">

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/content_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

</FrameLayout>
